<resources>
    <string name="server_url">ws://192.168.155.188:8082/chat</string>
    <string name="token">tokenFB %s</string>
    <string name="app_name">Health Care Center</string>
    <string name="str_title_profile_medical">Hồ sơ bệnh án</string>
    <string name="str_all"><u>Tất cả</u></string>
    <string name="tab_profile_doctor">Thông báo</string>
    <string name="str_forgot_password">Quên mật khẩu?</string>
    <string name="str_login">Bạn đã có tài khoản?</string>
    <string name="str_edit_profile">Chỉnh sửa hồ sơ</string>
    <string name="str_login_fingerprint">Đăng nhập với vân tay</string>
    <string name="str_account_vietnamese">Tiếng Việt (VN)</string>
    <string name="str_support_setting">Hỗ trợ</string>
    <string name="str_language_setting">Ngôn ngữ</string>
    <string name="str_save_profile">Xác nhận</string>
    <string name="str_questions_setting">Các câu hỏi thường gặp</string>
    <string name="str_logout">Đăng xuất</string>
    <string name="account_header_title">Tài khoản</string>
    <string name="account_option_account_setting">Thiết lập tài khoản</string>
    <string name="account_update_info_success">Cập nhật thành công</string>
    <string name="account_option_activity_history">Lịch sử hoạt động</string>
    <string name="account_option_application_setting">Thiết lập ứng dụng</string>
    <string name="account_user_info">Thông tin cá nhân</string>
    <string name="account_edit">Chỉnh sửa</string>
    <string name="str_forgot_and_change_password_title">Quên mật khẩu</string>
    <string name="str_update">Cập nhật</string>
    <string name="account_logout">ĐĂNG XUẤT</string>
    <string name="account_validate_name">Vui lòng nhập họ và tên!</string>
    <string name="account_validate_name_lenght">Vui lòng nhập họ tên tối đa 255 ký tự!</string>
    <string name="account_validate_dob">Vui lòng nhập ngày sinh!</string>
    <string name="account_validate_phone">Vui lòng nhập số điện thoại!</string>
    <string name="account_validate_phone_format">Vui lòng nhập đúng định dạng số điện thoại!</string>
    <string name="account_validate_gender">Vui lòng chọn giới tính!</string>
    <string name="account_validate_address">Vui lòng nhập địa chỉ thường trú!</string>
    <string name="str_user_zalo">Đăng nhập với zalo</string>
    <string name="str_user_facebook">Đăng nhập với Facebook</string>
    <string name="str_user_google">Đăng nhập với Google</string>
    <string name="str_newest" translatable="false">Mới nhất</string>
    <string name="str_hello_user" translatable="false">Xin chào buổi sáng</string>
    <string name="str_hello_user_evening" translatable="false">Xin chào buổi tối</string>
    <string name="str_qr_doctor" translatable="false">Quét mã QR</string>
    <string name="str_capture" translatable="false">Chụp</string>
    <string name="home_doctor_hello">Xin chào,</string>
    <string name="list_patient">Danh sách bệnh nhân</string>
    <string name="home_doctor_work_schedule">Lịch làm việc</string>
    <string name="home_doctor_format">Dr. {0}</string>
    <string name="home_doctor_format_experts">Chức vụ: {0}</string>
    <string name="home_doctor_scan_qr_code">Mã QR không hợp lệ!</string>
    <string name="str_medical_records">Hồ sơ\nbệnh án</string>
    <string name="str_test_update">Cập nhật\nxét nghiệm</string>
    <string name="str_handbook">Cẩm nang sức khỏe</string>
    <string name="str_specialist_home">Khám\nChuyên khoa</string>
    <string name="str_specialist">Chuyên khoa</string>
    <string name="str_medical_equipment_home">Tư vấn\nTrực tuyến</string>
    <string name="str_genera_home">Khám\nTổng quát</string>
    <string name="str_test_home">Xét nghiệm</string>
    <string name="str_cancer_home">Tầm soát\nUng thư</string>
    <string name="str_at_home">Chăm sóc\nY tế tại nhà</string>
    <string name="make_an_appointment_header_title">Đặt lịch khám</string>
    <string name="update_test_result_file">Tệp tin</string>
    <string name="file_not_recognized">tập tin không được công nhận</string>
    <string name="choose_one_activity_to_open">Chọn một ứng dụng để mở</string>
    <string name="no_suitable_application">Không có ứng dụng để mở file</string>
    <string name="str_info_medical">Thông tin khám</string>
    <string name="str_make_appointment">Hẹn lịch tái khám</string>
    <string name="str_info_strong">Thông tin sức khỏe</string>
    <string name="str_please_wait">Vui lòng chờ quá trình tải lên hoàn tất !</string>
    <string name="update_file_success">Cập nhật lịch sử khám bệnh thành công!</string>
    <string name="reschedule_medical_success">Hẹn lịch tái khám thành công!</string>
    <string name="str_update_file_success">Cập nhật thành công!</string>
    <string name="str_confirm_success">Xác nhận đã khám thành công!</string>
    <string name="str_create_success">Tạo thành công !</string>
    <string name="str_create_medical_history_success">Tạo lịch sử khám bệnh thành công!</string>
    <string name="str_new_notification_status">Mới</string>
    <string name="str_make_appointment_user">Lịch tái khám</string>
    <string name="hair_space">&#x200A;</string>
    <string name="str_notification">Thông báo</string>
    <string name="str_none_notification">Bạn chưa có thông báo nào</string>
    <string name="str_price" translatable="false">Giá khám:</string>
    <string name="str_create_medical" translatable="false">Đặt lịch ngay</string>
    <string name="register_header_title_new">Đăng ký tài khoản</string>
    <string name="register_username_hint">Tên</string>
    <string name="authen_username_hint">Số điện thoại/Email</string>
    <string name="authen_phone_hint">Số điện thoại</string>
    <string name="authen_email_hint">Email</string>
    <string name="register_password_hint"><![CDATA[Mật khẩu<br/><font color=\'#DC2220\'><i>(ít nhất 6 ký tự cả chữ hoa,chữ thường và số)</i></font>]]></string>
    <string name="old_password_hint"><![CDATA[Mật khẩu cũ<br/><font color=\'#DC2220\'><i>(ít nhất 6 ký tự cả chữ hoa,chữ thường và số)</i></font>]]></string>
    <string name="new_password_hint"><![CDATA[Mật khẩu mới<br/><font color=\'#DC2220\'><i>(ít nhất 6 ký tự cả chữ hoa,chữ thường và số)</i></font>]]></string>
    <string name="register_confirm_password_hint">Nhập lại mật khẩu</string>
    <string name="register_birthday_hint">Ngày sinh</string>
    <string name="register_address_hint_new">Địa chỉ cụ thể</string>
    <string name="register_address_test">Địa chỉ khám bệnh</string>
    <string name="str_identityCard">Căn cước công dân</string>
    <string name="str_healthInsurance">Mã bảo hiểm y tế</string>
    <string name="btn_register_title">Đăng ký</string>
    <string name="str_profile">Sửa thông tin cá nhân</string>
    <string name="register_validate_enter_name">Vui lòng nhập họ và tên!</string>
    <string name="register_validate_enter_user_name">Vui lòng nhập Email hoặc số điện thoại!</string>
    <string name="register_validate_too_long_name"> Vui lòng nhập họ và tên lớn nhất 255 kí tự!</string>
    <string name="register_validate_user_name">Vui lòng nhập số điện thoại</string>
    <string name="register_validate_user_name_not_phone_or_email">Tài khoản phải là số điện thoại</string>
    <string name="register_validate_user_name_not_email">Vui lòng nhập đúng định dạng email!</string>
    <string name="register_validate_user_name_not_phone">Vui lòng nhập đúng định dạng số điện thoại!</string>
    <string name="register_validate_enter_password">Vui lòng nhập mật khẩu</string>
    <string name="register_validate_wrong_format_password">Mật khẩu phải bao gồm cả chữ vào số</string>
    <string name="register_validate_too_short_password">Vui lòng nhập mật khẩu ít nhất 6 kí tự!</string>
    <string name="register_validate_enter_confirm_password">Vui lòng nhập lại mật khẩu!</string>
    <string name="register_validate_too_long_password">Vui lòng nhập mật khẩu lớn nhất 50 kí tự!</string>
    <string name="register_validate_confirm_password_not_match">Vui lòng nhập lại mật khẩu khớp với mật khẩu!</string>
    <string name="register_validate_enter_birthday">Vui lòng nhập ngày sinh</string>
    <string name="register_validate_enter_gender">Vui lòng chọn giới tính!</string>
    <string name="register_validate_enter_address">Vui lòng nhập địa chỉ</string>
    <string name="register_validate_enter_birth_day">Vui lòng nhập ngày sinh!</string>
    <string name="str_more">Khác</string>
    <string name="str_accept">Đồng ý</string>
    <string name="str_update_success">Cập nhật thành công</string>
    <string name="str_update_error">Cập nhật thất bại</string>
    <string name="str_updating">Đang tải ...</string>
    <string name="str_male">Nam</string>
    <string name="str_female">Nữ</string>
    <string name="login_hint_username"><u>ID</u></string>
    <string name="login_tv_register_title"><u>Đăng ký tài khoản</u></string>
    <string name="register_account_success"><u>Đăng ký hội viên thành công!</u></string>
    <string name="btn_login_title">Đăng nhập</string>
    <string name="btn_login_title_doctor">Đăng nhập là bác sĩ</string>
    <string name="btn_login_title_patient">Đăng nhập là bệnh nhân</string>
    <string name="login_username_hint">Tên đăng nhập</string>
    <string name="login_password_hint">Mật khẩu</string>
    <string name="login_password_note">(Ít nhất 6 ký tự cả chữ hoa, chữ thường và số)</string>
    <string name="facebook_img_url">https://graph.facebook.com/{0}/picture?type=large</string>
    <string name="login_validate_user_name">Vui lòng nhập Email hoặc số điện thoại!</string>
    <string name="login_validate_password">Vui lòng nhập mật khẩu!</string>
    <string name="login_successful">Đăng nhập thành công!</string>
    <string name="login_failed">Đăng nhập thất bại!</string>
    <string name="str_choose_login">Hoặc đăng nhập qua</string>
    <string name="login_validate_token">Không thể lấy token thiết bị, vui lòng kiểm tra mạng và thử lại</string>
    <string name="str_error_change_pw" translatable="false">Vui lòng nhập đầy đủ vào ô trống</string>
    <string name="str_error_change_pw_cf" translatable="false">Vui lòng nhập mật khẩu mới trùng nhau</string>
    <string name="create_medical_identity_card">Vui lòng nhập đúng định dạng CCCD/CMND!</string>
    <string name="create_medical_health_insurance">Vui lòng nhập đúng định dạng Mã số thẻ bảo hiểm Y tế!</string>
    <string name="create_resume_describe_self_length_150">Vui lòng nhập mô tả bản thân lớn nhất 150 kí tự!</string>
    <string name="create_resume_describe_self_input">Vui lòng nhập mô tả bản thân!</string>
    <string name="create_resume_name">Họ và tên <font color="#A04FE9">*</font></string>
    <string name="create_resume_phone">Số điện thoại <font color="#A04FE9">*</font></string>
    <string name="create_resume_birthday">Ngày sinh <font color="#A04FE9">*</font></string>
    <string name="create_resume_gender">Giới tính <font color="#A04FE9">*</font></string>
    <string name="create_update_resume_user_body_index">Chỉ số cơ thể</string>
    <string name="confirm_old_password_title_change">Mật khẩu hiện tại<font color='#FFF50505'> *</font></string>
    <string name="confirm_new_password_title_change">Mật khẩu mới<font color='#FFF50505'> *</font></string>
    <string name="confirm_password_re_password_title_change">Nhập lại mật khẩu mới<font color='#FFF50505'> *</font></string>
    <string name="confirm_password_change_password">Đổi mật khẩu</string>
    <string name="confirm_old_password_title_forgot">Email khi đăng kí tài khoản<font color='#FFF50505'> *</font></string>
    <string name="confirm_password_forgot_active_otp">OTP nhận được<font color='#FFF50505'> *</font></string>
    <string name="confirm_password_forgot_active_title">Cập nhật mật khẩu</string>
    <string name="confirm_password_forgot_password">Quên mật khẩu</string>
    <string name="confirm_password_note">Lưu ý:\nMật khẩu mới không được giống mật khẩu hiện tại</string>
    <string name="str_ok">OK</string>
    <string name="str_huy">Hủy</string>
</resources>