<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_16_dp">

    <TextView
        android:id="@+id/title"
        style="@style/roboto_bold_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10_dp"
        android:gravity="center_horizontal"
        android:text="@string/confirm_password_change_password"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_current_pw"
        style="@style/roboto_bold_14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20_dp"
        android:text="@string/confirm_old_password_title_change"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_current_pw"
        style="@style/roboto_regular_16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10_dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_current_pw" />

    <TextView
        android:id="@+id/tv_newpw"
        style="@style/roboto_bold_14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_new_password_title_change"
        app:layout_constraintTop_toBottomOf="@id/edt_current_pw" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_new_pw"
        style="@style/roboto_regular_16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10_dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_newpw" />

    <TextView
        android:id="@+id/tv_cf_newpw"
        style="@style/roboto_bold_14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password_re_password_title_change"
        app:layout_constraintTop_toBottomOf="@id/edt_new_pw" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_cf_pw"
        style="@style/roboto_regular_16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10_dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cf_newpw" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_note"
        style="@style/roboto_regular_12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15_dp"
        android:text="@string/confirm_password_note"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/edt_cf_pw" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_ok"
        style="@style/roboto_regular_16dp"
        android:layout_width="@dimen/width_78.5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15_dp"
        android:background="@drawable/bg_border_home"
        android:gravity="center"
        android:paddingHorizontal="@dimen/margin_20_dp"
        android:paddingVertical="@dimen/margin_15_dp"
        android:text="@string/str_ok"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/tv_note"
        app:layout_constraintTop_toBottomOf="@id/tv_note" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_cancel"
        style="@style/roboto_regular_16dp"
        android:layout_width="@dimen/width_78.5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15_dp"
        android:background="@drawable/bg_border_home"
        android:gravity="center"
        android:paddingHorizontal="@dimen/margin_20_dp"
        android:paddingVertical="@dimen/margin_15_dp"
        android:text="@string/str_huy"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/edt_cf_pw"
        app:layout_constraintTop_toBottomOf="@id/tv_note" />
</androidx.constraintlayout.widget.ConstraintLayout>
