<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg_login"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_30_dp"
            android:src="@drawable/ic_favourite_setting" />

        <TextView
            android:id="@+id/header"
            style="@style/roboto_bold_18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10_dp"
            android:gravity="center"
            android:text="@string/register_header_title_new"
            android:textColor="@color/white" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:fillViewport="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_15_dp"
                android:layout_marginTop="@dimen/margin_30_dp"
                android:layout_marginBottom="@dimen/margin_60_dp"
                android:background="@drawable/bg_border_form_authen"
                android:orientation="vertical"
                android:paddingVertical="@dimen/margin_26_dp"
                android:paddingStart="@dimen/margin_22_dp"
                android:paddingEnd="@dimen/margin_21_dp">

                <EditText
                    android:id="@+id/input_phone_register"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/bg_border_input_authen"
                    android:hint="@string/authen_username_hint"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/input_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_40_dp"
                    android:layout_marginTop="@dimen/margin_20_dp"
                    android:background="@drawable/bg_border_input_authen"
                    android:hint="@string/login_password_hint"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/input_confirm_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_40_dp"
                    android:layout_marginTop="@dimen/margin_20_dp"
                    android:background="@drawable/bg_border_input_authen"
                    android:hint="@string/register_confirm_password_hint"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/input_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_40_dp"
                    android:layout_marginTop="@dimen/margin_20_dp"
                    android:background="@drawable/bg_border_input_authen"
                    android:hint="Họ và tên"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/tv_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_40_dp"
                    android:layout_marginTop="@dimen/margin_20_dp"
                    android:background="@drawable/bg_border_input_authen"
                    android:hint="@string/register_birthday_hint"
                    android:padding="10dp" />


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imv_male"
                        android:layout_width="@dimen/margin_30_dp"
                        android:layout_height="@dimen/margin_30_dp"
                        android:padding="@dimen/margin_5_dp"
                        android:src="@drawable/ic_rbtn_unselected" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/roboto_bold_16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_3_dp"
                        android:text="@string/str_male"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imv_female"
                        android:layout_width="@dimen/margin_30_dp"
                        android:layout_height="@dimen/margin_30_dp"
                        android:layout_marginStart="@dimen/margin_30_dp"
                        android:padding="@dimen/margin_5_dp"
                        android:src="@drawable/ic_rbtn_unselected" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/roboto_bold_16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_3_dp"
                        android:text="@string/str_female"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imv_other"
                        android:layout_width="@dimen/margin_30_dp"
                        android:layout_height="@dimen/margin_30_dp"
                        android:layout_marginStart="@dimen/margin_30_dp"
                        android:padding="@dimen/margin_5_dp"
                        android:src="@drawable/ic_rbtn_unselected" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/roboto_bold_16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_3_dp"
                        android:text="@string/str_more"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <EditText
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_40_dp"
                    android:layout_marginTop="@dimen/margin_20_dp"
                    android:background="@drawable/bg_border_input_authen"
                    android:hint="@string/register_address_hint_new"
                    android:maxLength="255"
                    android:padding="10dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btn_register"
                    style="@style/roboto_bold_18dp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_40_dp"
                    android:layout_marginTop="@dimen/margin_32_dp"
                    android:background="@drawable/bg_border_button_authen"
                    android:gravity="center"
                    android:text="@string/btn_register_title"
                    android:textAllCaps="false"
                    android:textColor="#0957DF" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>