<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_16_dp">

    <TextView
        android:id="@+id/title"
        style="@style/roboto_bold_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10_dp"
        android:gravity="center_horizontal"
        android:text="@string/confirm_password_forgot_active_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_otp"
        style="@style/roboto_bold_14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20_dp"
        android:gravity="center_horizontal"
        android:text="@string/confirm_password_forgot_active_otp"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_otp"
        style="@style/roboto_regular_16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@id/tv_otp"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tv_pw"
        style="@style/roboto_bold_14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20_dp"
        android:gravity="center_horizontal"
        android:text="@string/confirm_new_password_title_change"
        app:layout_constraintTop_toBottomOf="@id/edt_otp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_pw"
        style="@style/roboto_regular_16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@id/tv_pw"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_ok"
        style="@style/roboto_regular_16dp"
        android:layout_width="@dimen/width_78.5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15_dp"
        android:background="@drawable/bg_border_home"
        android:gravity="center"
        android:paddingHorizontal="@dimen/margin_15_dp"
        android:paddingVertical="@dimen/margin_7_dp"
        android:text="@string/str_ok"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/edt_pw"
        app:layout_constraintTop_toBottomOf="@id/edt_pw" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_cancel"
        style="@style/roboto_regular_16dp"
        android:layout_width="@dimen/width_78.5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15_dp"
        android:background="@drawable/bg_border_home"
        android:gravity="center"
        android:paddingHorizontal="@dimen/margin_15_dp"
        android:paddingVertical="@dimen/margin_7_dp"
        android:text="@string/str_huy"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/edt_pw"
        app:layout_constraintTop_toBottomOf="@id/edt_pw" />
</androidx.constraintlayout.widget.ConstraintLayout>

